--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-bootstrap": "^1.4.0",
     "react-chartjs-2": "^2.11.1",
     "react-dom": "^17.0.1",
+    "react-funnel-pipeline": "^0.1.0",
     "react-scripts": "4.0.1",
     "web-vitals": "^0.2.4"
   },
